fix button colors for dark mode (#26)

--- a/packages/ext-subscriptions/less/forum.less
+++ b/packages/ext-subscriptions/less/forum.less
@@ -6,8 +6,12 @@
   background: #aaa;
 }
 .SubscriptionMenu-button--follow {
-  .Button--color(#de8e00, #fff2ae);
-  // TODO: dark mode
+  & when (@config-dark-mode = false) {
+    .Button--color(#de8e00, #fff2ae);
+  }
+  & when (@config-dark-mode = true) {
+    .Button--color(#784d00, #fbb94c);
+  }
 }
 .SubscriptionMenu .Dropdown-menu {
   min-width: 260px;
